force-app/main/default/objects/KimbleOne__ActivityTimePatternTemplate__c/KimbleOne__ActivityTimePatternTemplate__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Activity Time Pattern Template</label>
    <nameField>
        <label>Activity Time Pattern Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Time Pattern Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>