force-app/main/default/objects/KimbleOne__ActivityTimePatternTemplate__c/fields/KimbleOne__ForecastUsageEntryFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastUsageEntryFormat__c</fullName>
    <label>Forecast Usage Entry Format</label>
    <precision>7</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>