force-app/main/default/objects/KimbleOne__ActivityTimePatternTemplate__c/fields/KimbleOne__ResourcedActivityTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcedActivityTemplate__c</fullName>
    <label>Resourced Activity Template</label>
    <referenceTo>KimbleOne__ResourcedActivityTemplate__c</referenceTo>
    <relationshipLabel>Activity Time Pattern Templates</relationshipLabel>
    <relationshipName>ActivityTimePatternTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>