force-app/main/default/objects/KimbleOne__ActivityTimePatternTemplate__c/fields/KimbleOne__TimePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimePattern__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Time Pattern</label>
    <referenceTo>KimbleOne__TimePattern__c</referenceTo>
    <relationshipLabel>Activity Time Pattern Templates</relationshipLabel>
    <relationshipName>ActivityTimePatternTemplates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>