force-app/main/default/objects/KimbleOne__ActivityTimePatternTemplate__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ActualUsageEntryFormat__c</columns>
    <columns>KimbleOne__ForecastUsageEntryFormat__c</columns>
    <columns>KimbleOne__ResourcedActivityTemplate__c</columns>
    <columns>KimbleOne__TimePattern__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>